--- a/style.css
+++ b/style.css
@@ -350,8 +350,9 @@ footer {
 
 .nav-toggle-label span::before { top: -8px; }
 .nav-toggle-label span::after { top: 8px; }
-@media screen and (max-width: 768px) {
-    .nav-toggle-label {
+
+@media screen and (max-width: 855px) {
+     .nav-toggle-label {
         display: block;
     }
     header h1{
@@ -367,7 +368,7 @@ footer {
         display: none;
         position: absolute;
         right: 0;
-        top: 60px; 
+        top: 50px; 
         background-color: rgba(255, 255, 255, 0.9);
         width: 100%;
         text-align: center;
@@ -382,6 +383,33 @@ footer {
         margin: 0;
         padding: 0;
     }
+    .hero {
+        margin-top: 50px;
+        height: 150px;
+    }
+.article-left .overlay, .article-right .overlay {
+    font-size: 1em;
+    height: 90%;
+    opacity: 1;
+}
+.article-left .text-side, .article-right .text-side {
+        width: 100%;
+        opacity: 1;
+        transition: opacity 0.5s ease, transform 0.5s ease;
+        transform: translateY(20px);
+        transform: skewX(-20deg);
+        padding: 10px;
+        margin: 0;
+        text-align: center;
+        align-items: center;
+        align-self: center;
+    }
+
+
+}
+
+@media screen and (max-width: 768px) {
+   
      .article-left, .article-right {
         flex-direction: column;
     }
