--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ article img {
     top: 0;
     left: 0;
     width: 100%;
-    height: 96%;
+    height: 95%;
     background: rgba(75, 58, 58, 0.65);
     color: white;
     display: flex;
@@ -185,6 +185,14 @@ article img {
 
 .article-right {
     flex-direction: row-reverse;
+}
+#link-icon {
+    width: 14px; 
+    margin: 0 5px 5px 0;
+    fill: #00a3cc;
+    height: auto;
+    vertical-align: middle;
+    overflow: visible;
 }
 
 .staff-text {
@@ -396,7 +404,7 @@ footer {
     }
 .article-left .overlay, .article-right .overlay {
     font-size: 1em;
-    height: 90%;
+    height: 93%;
     opacity: 1;
 }
 .article-left .text-side, .article-right .text-side {
@@ -416,6 +424,13 @@ footer {
     padding: 8px;
 }
 
+}
+@media screen and (max-width: 1200px) {
+.article-left .overlay, .article-right .overlay {
+    font-size: 1em;
+    height: 90%;
+    opacity: 1;
+}
 }
 
 @media screen and (max-width: 768px) {
@@ -456,7 +471,7 @@ footer {
 }
 .article-left .overlay, .article-right .overlay {
     font-size: 1.3em;
-    height: 92%;
+    height: 95%;
     opacity: 1;
 }
 .article-left .overlay p, .article-right .overlay p{
@@ -466,3 +481,7 @@ footer {
     margin-right: 0;
 }
 }
+@media screen and (max-width: 468px) {
+.article-left .overlay, .article-right .overlay {
+    height: 91%;
+}}
