--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ article img {
 .article-right {
     flex-direction: row-reverse;
 }
-#link-icon {
+img.link-icon {
     width: 14px; 
     margin: 0 5px 5px 0;
     fill: #00a3cc;
