--- a/style.css
+++ b/style.css
@@ -514,6 +514,9 @@ footer {
 .popup-button {
     margin-right: 0;
 }
+img.link-icon {
+    width: 14px; 
+    
 }
 @media screen and (max-width: 468px) {
 .article-left .overlay, .article-right .overlay {
