fix html issues in validator

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,7 +371,9 @@ footer {
 .nav-toggle-label span::after {
 	top: 8px;
 }
-
+#workwall-link {
+	margin: 0;
+}
 @media screen and (max-width: 1400px) {
 	.article-left .overlay,
 	.article-right .overlay {
