--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ nav ul li a:hover {
 	color: #d60db6;
 	text-decoration: underline;
 }
-
+/* intro image and text for each page */
 .hero {
 	background: url("assets/images/assistance.webp") no-repeat center center/cover;
 	height: 210px;
@@ -87,25 +87,32 @@ nav ul li a:hover {
 	font-size: 3.2em;
 	margin-bottom: 0.6em;
 }
-
-.staff-text {
-	width: 85%;
-}
-
-.staff-text h2 {
-	color: #00a3cc;
-}
-
 .hero p {
 	font-size: 1.6em;
 	max-width: 820px;
 	margin: auto;
 }
+/* text section for staff page */
+.staff-text {
+	width: 80%;
+	padding: 40px;
+	background-color: #fff;
+	margin: 0 auto;
+	align-self: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
+.staff-text h2 {
+	color: #00a3cc;
+}
 .content {
 	margin: 42px 0;
 }
-
+/* page sections with images and text */
 article {
 	margin-bottom: 32px;
 	background-color: #f9f9f9;
@@ -113,13 +120,11 @@ article {
 	border-radius: 10px;
 	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.12);
 }
-
 article img {
 	max-width: 100%;
 	height: auto;
 	margin-bottom: 17px;
 }
-
 .article-left,
 .article-right {
 	display: flex;
@@ -128,13 +133,11 @@ article img {
 	overflow: hidden;
 	font-size: 1.25em;
 }
-
 .article-left .image-side,
 .article-right .image-side {
 	width: 62%;
 	position: relative;
 }
-
 .article-left img,
 .article-right img {
 	width: 100%;
@@ -144,7 +147,6 @@ article img {
 	border-radius: 95%;
 	z-index: 1;
 }
-
 .article-left .overlay,
 .article-right .overlay {
 	position: absolute;
@@ -163,7 +165,6 @@ article img {
 	border-radius: 85%;
 	text-align: center;
 }
-
 .article-left .text-side,
 .article-right .text-side {
 	width: 67%;
@@ -195,18 +196,6 @@ img.link-icon {
 	overflow: visible;
 }
 
-.staff-text {
-	width: 80%;
-	padding: 40px;
-	background-color: #fff;
-	margin: 0 auto;
-	align-self: center;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	text-align: center;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
 #workwall-logo {
 	width: 100%;
 	height: 90%;
@@ -217,10 +206,10 @@ img.link-icon {
 .text-anchor {
 	margin-right: 0;
 }
+/* pop up for social media links  */
 .popup-checkbox {
 	display: none;
 }
-
 .popup-container {
 	display: none;
 	position: fixed;
@@ -231,7 +220,6 @@ img.link-icon {
 	background: rgba(0, 0, 0, 0.5);
 	z-index: 1002;
 }
-
 .popup-content {
 	background: #fff;
 	width: 300px;
@@ -254,7 +242,6 @@ img.link-icon {
 .popup-checkbox:checked ~ .popup-container {
 	display: block;
 }
-
 .close-btn {
 	cursor: pointer;
 	position: absolute;
@@ -289,7 +276,7 @@ img.link-icon {
 .icon-ref {
 	font-size: xx-small;
 }
-
+/* responsive design for different screen sizes */
 @media screen and (max-width: 768px) {
 	.article-left,
 	.article-right {
