--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 
 .navbar {
 	background-color: rgba(255, 255, 255, 0.85);
-	color: #00a3cc;
+	color: #0389aa;
 	padding: 12px 22px;
 	position: fixed;
 	top: 0;
@@ -25,7 +25,7 @@ body {
 }
 
 header h1 {
-	color: #00a3cc;
+	color: #0389aa;
 	font-size: 2.2em;
 	margin: 0;
 }
@@ -48,7 +48,7 @@ nav ul li {
 
 nav ul li a {
 	text-decoration: none;
-	color: #00a3cc;
+	color: #0389aa;
 	font-size: 1.4em;
 }
 
@@ -60,7 +60,7 @@ a,
 .popup-button {
 	display: inline-block;
 	margin-top: 15px;
-	color: #00a2cbfc;
+	color: #0389aa;
 	text-decoration: none;
 	font-weight: bold;
 	text-align: end;
@@ -111,7 +111,7 @@ a:hover,
 	top: 8px;
 }
 h3 {
-	color: #00a2cbfc;
+	color: #0389aa;
 	margin-top: 0;
 	margin-bottom: 0;
 }
@@ -174,7 +174,7 @@ footer {
 }
 
 .staff-text h2 {
-	color: #00a3cc;
+	color: #0389aa;
 }
 .content {
 	margin: 42px 0;
